--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="register">Register</string>
+    <string name="list">List</string>
     <string-array name="country_arrays">
         <item>1</item>
         <item>2</item>
@@ -15,4 +17,6 @@
         <item>11</item>
         <item>12</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
